--- a/springmvc/src/main/resources/application.properties
+++ b/springmvc/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+#전체 로그 레벨 설정(기본 info)
+# logging.level.root=info
+#
+# hello.springmvc 패키지와  그 하위 로그 레벨 설정
+#로컬 서버
+#logging.level.hello.springmvc=trace
+#개발 서버
+#logging.level.hello.springmvc=debug
+#운영 서버
+#logging.level.hello.springmvc=info
